# todo-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  test-data.json
.github/workflows/: publish.yml  rust.yml
src/: cli.rs  main.rs  storage.rs
src/commands/: add.rs  done.rs  edit.rs  list.rs  mod.rs  remove.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs  view_model.rs
src/tui/state/: edit_buffer.rs  field_buffer.rs  mod.rs
src/tui/uis/: todo_list.rs
src/tui/view_models/: edit_mode_modal_view_model.rs  mod.rs  todo_view_model.rs
src/tui/views/: edit_modal.rs  mod.rs  todo_list.rs
