[package]
name = "crix-todo"
version = "0.4.2"
edition = "2024"
authors = ["Gavin Garcia <gavin.garcia0001@gmail.com>"]
description = "A terminal-based todo list manager with CLI and TUI support"
license = "MIT"
readme = "README.md"
repository = "https://github.com/choneface/crix-todo"
keywords = ["todo", "cli", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.26"
crossterm = "0.27"
mockall = "0.13.1"
textwrap = "0.16"

[dev-dependencies]
tempfile = "3"
